--- a/Ecodiv-responsive/style2.css
+++ b/Ecodiv-responsive/style2.css
@@ -66,6 +66,7 @@ body, html {
 #menuicon{
     margin-left:20px; 
     padding-top:10px;
+    width:90px;
 }
 
 
