--- a/Ecodiv-responsive/style3.css
+++ b/Ecodiv-responsive/style3.css
@@ -65,6 +65,7 @@ body, html {
 #menuicon{
     margin-left:20px; 
     padding-top:10px;
+    width:90px;
 }
 
 
